force-app/main/default/objects/Rural_Property__c/Rural_Property__c.object-meta.xml
<CustomObject>
    <description>Armazena as propriedades rurais vinculadas aos produtores cadastrados no CRM.</description>
    <label>Propriedade Rural</label>
    <nameField>
        <label>Nome da Propriedade</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Propriedades Rurais</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>