force-app/main/default/objects/Rural_Property__c/fields/Location_Reference__c.field-meta.xml
<CustomField>
    <fullName>Location_Reference__c</fullName>
    <description>Armazena uma referência simples para ajudar na localização da propriedade rural.</description>
    <inlineHelpText>Informe pontos de referência ou instruções para chegar à propriedade.</inlineHelpText>
    <label>Referência de Localização</label>
    <type>TextArea</type>
</CustomField>