force-app/main/default/objects/Rural_Property__c/fields/Municipality__c.field-meta.xml
<CustomField>
    <fullName>Municipality__c</fullName>
    <description>Armazena o município onde a propriedade rural está localizada.</description>
    <inlineHelpText>Informe o município da propriedade rural.</inlineHelpText>
    <label>Município</label>
    <length>80</length>
    <type>Text</type>
</CustomField>