force-app/main/default/objects/Rural_Property__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <type>MasterDetail</type>
    <inlineHelpText>Selecione o produtor responsável por esta propriedade rural.</inlineHelpText>
    <description>Relaciona a propriedade rural ao produtor responsável cadastrado na Account.</description>
    <label>Produtor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Propriedades Rurais</relationshipLabel>
    <relationshipName>PropriedadesRurais</relationshipName>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>