force-app/main/default/objects/Rural_Property__c/fields/Total_Area_Hectares__c.field-meta.xml
<CustomField>
    <fullName>Total_Area_Hectares__c</fullName>
    <description>Armazena a área total da propriedade rural em hectares.</description>
    <inlineHelpText>Informe a área total da propriedade em hectares.</inlineHelpText>
    <label>Área Total em Hectares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>